# open-agent

./: .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  LICENSE  OpenAgent_UI.jsx  README.md  RUN_GUIDE.md  __init__.py  __main__.py  debug_chroma.py  debug_chroma_v2.py  debug_llm.py  debug_openrouter.py  debug_server_client.py  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  cli.py  settings.example.yaml  settings.yaml
core/: __init__.py  agent.py  llm.py  network.py  router.py
data/: .gitkeep
logs/: .gitkeep
memory/: __init__.py  store.py
parsers/: __init__.py  docx_parser.py  image_parser.py  pdf_parser.py  txt_parser.py  unified.py
scripts/: setup_models.sh  setup_windows.ps1
tests/: __init__.py  test_memory.py  test_network.py  test_parsers.py  test_tools.py
tools/: __init__.py
tools/offline/: __init__.py  file_ops.py  run_command.py  summarize.py
tools/online/: __init__.py  web_fetch.py  web_search.py
ui/: debug_imports.py  demo_server.py  export_templates.py  index.html  index_react.html.bak  server.py
